www/front_src/src/styles/partials/_content.scss
/* ---------------------------------------------------
    CONTENT STYLE
----------------------------------------------------- */

.wrapper {
  display: flex;
  align-items: stretch;
}

.main-content {
  height: 100%;
  width: 100%;
  background-color: white;
}

.content {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  width: 100%;
  height: 100vh;
  transition: all 0.3s;
  position: relative;
}

.fullscreen-wrapper {
  flex-grow: 1;
  overflow: hidden;
}

